--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,27 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+::-webkit-scrollbar{
+  scroll-behavior: smooth;
+  width: 8px;
+}
+::-webkit-scrollbar-thumb{
+  background-color: #0e0e0e;
+
+  border-radius: 10px;
+  border: #fff solid 3px;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+#home-img{
+  background-image: url('../../public/fundo-login.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: right;
 }
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+#fundo-perfil{
+  background-image: url('../../public/fundo.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
